@@ -63,7 +63,7 @@ def get_parser():
         epilog=textwrap.dedent(epilog),
         formatter_class=argparse.ArgumentDefaultsHelpFormatter)
 
-    parser.add_argument('infile')
+    parser.add_argument('infile', nargs='?', default='/dev/stdin')
 
     parser.add_argument('-o', '--output-dir', metavar="output_directory",
                         dest='output_directory', default='', help='Output '
@@ -92,12 +92,17 @@ def main():
 
     infile = args.infile
 
-    check_input_files(infile, args.force)
     filenames = [infile]
+    check_input_files(infile, args.force)
     check_space(filenames, args.force)
 
     # decide where to put output files - specific directory? or just default?
-    if args.output_directory:
+    if infile == '/dev/stdin':
+        if not (args.output_first and args.output_second):
+            print >>sys.stderr, ("Accepting input from stdin; "
+                                 "output filenames must be provided.")
+            sys.exit(1)
+    elif args.output_directory:
         if not os.path.exists(args.output_directory):
             os.makedirs(args.output_directory)
         out1 = args.output_directory + '/' + os.path.basename(infile) + '.1'
@@ -122,10 +127,10 @@ def main():
     screed_iter = screed.open(infile, parse_description=False)
 
     # walk through all the reads in broken-paired mode.
-    for index, is_pair, record1, record2 in broken_paired_reader(screed_iter):
-        if index % 100000 == 0 and index:
-            print >> sys.stderr, '...', index
-
+    paired_iter = broken_paired_reader(screed_iter)
+    for index, is_pair, record1, record2 in paired_iter:
+        if index % 10000 == 0:
+            print >>sys.stderr, '...', index
         # are we requiring pairs?
         if args.force_paired and not is_pair:
             print >>sys.stderr, 'ERROR, %s is not part of a pair' % \
